--- a/src/app.html
+++ b/src/app.html
@@ -2,15 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="manifest" href="%sveltekit.assets%/manifest.json" crossorigin="use-credentials" />
+		<link rel="icon" href="/@a21e259c-1c80-4d6b-928f-89716d576c13@/favicon.png" />
+		<link rel="manifest" href="/@a21e259c-1c80-4d6b-928f-89716d576c13@/manifest.json" crossorigin="use-credentials" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<meta name="robots" content="noindex,nofollow" />
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
 			title="Open WebUI"
-			href="/opensearch.xml"
+			href="/@a21e259c-1c80-4d6b-928f-89716d576c13@/opensearch.xml"
 		/>
 		<script>
 			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
@@ -74,7 +74,7 @@
 				}
 			</style>
 
-			<a href="@a21e259c-1c80-4d6b-928f-89716d576c13@/app"> <img
+			<a href="/@a21e259c-1c80-4d6b-928f-89716d576c13@/app"> <img
 				style="
 					position: absolute;
 					width: 6rem;
@@ -83,7 +83,7 @@
 					left: 50%;
 					margin: -40px 0 0 -40px;
 				"
-				src="/logo.svg"
+				src="/@a21e259c-1c80-4d6b-928f-89716d576c13@/logo.svg"
 			/></a>
 
 			<!-- <span style="position: absolute; bottom: 32px; left: 50%; margin: -36px 0 0 -36px">
